--- a/task4.3.4/docker-compose.yml
+++ b/task4.3.4/docker-compose.yml
@@ -1,14 +1,23 @@
 version: '3'
 
 services:
-  grafana:
-    build: ./grafana
+  prometheus:
+    image: prom/prometheus
     ports:
-      - "3000:3000"
-    networks:
-      - mylocal
+      - "9090:9090"
+    volumes:
+      - ./prometheus:/etc/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
     depends_on:
-      - prometheus
+      - app
+
+    grafana:
+      image: grafana/grafana
+      ports:
+        - "3000:3000"
+      depends_on:
+        - prometheus
   server:
     image: klakegg/hugo:0.101.0-ext-alpine
     container_name: hugo
