--- a/courier/.env
+++ b/courier/.env
@@ -1,9 +1,3 @@
-API_NAME=GeoTask
-ENV=dev
-SERVER_PORT=8080
-
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
-VIRTUAL_HOST=courier.ptflp.ru
-LETSENCRYPT_HOST=courier.ptflp.ru
-VIRTUAL_PORT=${SERVER_PORT}
+SERVER_PORT=8080
