--- a/courier/docker-compose.yml
+++ b/courier/docker-compose.yml
@@ -1,21 +1,20 @@
-# 2 service: golang api and redis
 version: '3.7'
 services:
   api:
-    build: geotask
+    build: .
     container_name: api
     ports:
       - 3080:${SERVER_PORT}
     restart: always
     networks:
-        - skynet
+      - skynet
     depends_on:
       - redis
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - VIRTUAL_HOST=papito.ru
-      - LETSENCRYPT_HOST=papito.ru
+      - VIRTUAL_HOST=courier.ptflp.ru
+      - LETSENCRYPT_HOST=courier.ptflp.ru
       - VIRTUAL_PORT=${SERVER_PORT}
   redis:
     image: redis
