--- a/task4.3.4/docker-compose.yml
+++ b/task4.3.4/docker-compose.yml
@@ -1,10 +1,6 @@
 version: '3'
 
 services:
-  grafana:
-      image: grafana/grafana
-      ports:
-        - "3000:3000"
   server:
     image: klakegg/hugo:0.101.0-ext-alpine
     container_name: hugo
@@ -35,9 +31,34 @@ services:
       - "./hugo/content:/app/static"
     ports:
       - "8080:8080"
+    depends_on:
+      - postgres
     networks:
         - mylocal
+  prometheus:
+    image: prom/prometheus:v2.30.0
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus:/etc/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    networks:
+      - mylocal
+  grafana:
+    image: reesfas/mygrafana:latest
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./grafana/dashboards:/etc/grafana/dashboards
+    depends_on:
+      - prometheus
+    networks:
+      - mylocal
 volumes:
+  grafana_data:
   postgres_data:
 networks:
     mylocal:
